# ariko

./: .gitignore  CLAUDE.md  COMPANION_APP_IDEAS.md  Cargo.toml  Makefile  Makefile.toml  PLAN.md  README.md  UPDATE_PLAN.md  build.rs  deploy.sh  device.x  memory.x  rust-toolchain.toml
sam3x8e-rs/sam3x8e/: Cargo.toml
sam3x8e-rs/sam3x8e-hal/: Cargo.toml
sam3x8e-rs/sam3x8e-hal-codegen/: Cargo.toml
sam3x8e-rs/sam3x8e-hal-codegen/src/pio/: pin.rs  pio.rs  pio_set.rs
sam3x8e-rs/sam3x8e-hal/src/: delay.rs  efc.rs  gpio.rs  lib.rs  pmc.rs  prelude.rs  rng.rs  timer.rs  watchdog.rs
sam3x8e-rs/sam3x8e-hal/src/delay/: syst.rs  tc.rs
sam3x8e-rs/sam3x8e-hal/src/timer/: rtt.rs  syst.rs
sam3x8e-rs/sam3x8e/src/: adc.rs  can0.rs  chipid.rs  dacc.rs  dmac.rs  efc1.rs  emac.rs  generic.rs  gpbr.rs  hsmci.rs  lib.rs  matrix.rs  piob.rs  pmc.rs  pwm.rs  rstc.rs  rtc.rs  rtt.rs  smc.rs  spi0.rs  ssc.rs  supc.rs  tc0.rs  trng.rs  twi0.rs  uart.rs  uotghs.rs  usart3.rs  wdt.rs
sam3x8e-rs/sam3x8e/src/adc/: acr.rs  cdr.rs  cgr.rs  chdr.rs  cher.rs  chsr.rs  cor.rs  cr.rs  cwr.rs  emr.rs  idr.rs  ier.rs  imr.rs  isr.rs  lcdr.rs  mr.rs  over.rs  seqr1.rs  seqr2.rs  wpmr.rs
sam3x8e-rs/sam3x8e/src/can0/: acr.rs  br.rs  ecr.rs  idr.rs  ier.rs  imr.rs  mam0.rs  mam4.rs  mam6.rs  mam7.rs  mcr4.rs  mcr5.rs  mdh3.rs  mdh7.rs  mdl4.rs  mdl7.rs  mfid0.rs  mfid1.rs  mfid4.rs  mfid6.rs  mid0.rs  mid5.rs  mmr1.rs  mmr2.rs  mmr3.rs  mr.rs  msr1.rs  msr5.rs  sr.rs  tcr.rs  wpsr.rs
sam3x8e-rs/sam3x8e/src/can1/: mam1.rs  mam2.rs  mam3.rs  mam5.rs  mcr0.rs  mcr1.rs  mcr2.rs  mcr3.rs  mcr6.rs  mcr7.rs  mdh0.rs  mdh1.rs  mdh2.rs  mdh4.rs  mdh5.rs  mdh6.rs  mdl0.rs  mdl1.rs  mdl2.rs  mdl3.rs  mdl5.rs  mdl6.rs  mfid2.rs  mfid3.rs  mfid5.rs  mfid7.rs  mid1.rs  mid2.rs  mid3.rs  mid4.rs  mid6.rs  mid7.rs  mmr0.rs  mmr4.rs  mmr5.rs  mmr6.rs  mmr7.rs  msr0.rs  msr2.rs  msr3.rs  (+6 more)
sam3x8e-rs/sam3x8e/src/chipid/: cidr.rs  exid.rs
sam3x8e-rs/sam3x8e/src/dacc/: acr.rs  cdr.rs  chdr.rs  cher.rs  chsr.rs  cr.rs  idr.rs  ier.rs  imr.rs  isr.rs  mr.rs  wpmr.rs  wpsr.rs
sam3x8e-rs/sam3x8e/src/dmac/: cfg0.rs  cfg1.rs  cfg2.rs  cfg3.rs  cfg4.rs  cfg5.rs  chdr.rs  cher.rs  chsr.rs  creq.rs  ctrla0.rs  ctrla1.rs  ctrla2.rs  ctrla3.rs  ctrla4.rs  ctrla5.rs  ctrlb0.rs  ctrlb1.rs  ctrlb2.rs  ctrlb3.rs  ctrlb4.rs  ctrlb5.rs  daddr0.rs  daddr1.rs  daddr2.rs  daddr3.rs  daddr4.rs  daddr5.rs  dscr0.rs  dscr1.rs  dscr2.rs  dscr3.rs  dscr4.rs  dscr5.rs  ebcidr.rs  ebcier.rs  ebcimr.rs  ebcisr.rs  en.rs  gcfg.rs  (+10 more)
sam3x8e-rs/sam3x8e/src/efc0/: frr.rs  fsr.rs
sam3x8e-rs/sam3x8e/src/efc1/: fcr.rs  fmr.rs
sam3x8e-rs/sam3x8e/src/emac/: ale.rs  cse.rs  dtf.rs  ecol.rs  ele.rs  fcse.rs  fro.rs  fto.rs  hrb.rs  hrt.rs  idr.rs  ier.rs  imr.rs  isr.rs  lcol.rs  man.rs  mcf.rs  ncfgr.rs  ncr.rs  nsr.rs  pfr.rs  ptr.rs  rbqp.rs  rja.rs  rle.rs  rov.rs  rre.rs  rse.rs  rsr.rs  sa1b.rs  sa1t.rs  sa2b.rs  sa2t.rs  sa3b.rs  sa3t.rs  sa4b.rs  sa4t.rs  scf.rs  ste.rs  tbqp.rs  (+5 more)
sam3x8e-rs/sam3x8e/src/generic/: raw.rs
sam3x8e-rs/sam3x8e/src/gpbr/: gpbr.rs
sam3x8e-rs/sam3x8e/src/hsmci/: argr.rs  blkr.rs  cfg.rs  cmdr.rs  cr.rs  cstor.rs  dma.rs  dtor.rs  fifo.rs  idr.rs  ier.rs  imr.rs  mr.rs  rdr.rs  rspr.rs  sdcr.rs  sr.rs  tdr.rs  wpmr.rs  wpsr.rs
sam3x8e-rs/sam3x8e/src/matrix/: ccfg_sysio.rs  matrix_mcfg.rs  matrix_mrcr.rs  matrix_pras0.rs  matrix_pras1.rs  matrix_pras2.rs  matrix_pras3.rs  matrix_pras4.rs  matrix_pras5.rs  matrix_pras6.rs  matrix_pras7.rs  matrix_pras8.rs  matrix_scfg.rs  matrix_wpmr.rs  matrix_wpsr.rs
sam3x8e-rs/sam3x8e/src/pioa/: elsr.rs  fellsr.rs  frlhsr.rs  idr.rs  ifdr.rs  ifsr.rs  ower.rs  psr.rs  sodr.rs  wpsr.rs
sam3x8e-rs/sam3x8e/src/piob/: aimmr.rs  mddr.rs  odsr.rs  osr.rs  (+3 more)
sam3x8e-rs/sam3x8e/src_backup/: lib.rs
(+1409 files in other folders)
