[package]
name = "certabo"
version = "0.1.0"
authors = ["Eugenio Depalo <eugeniodepalo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = "0.6.13"
panic-halt = "0.2.0"
sam3x8e-hal = { path = "./sam3x8e-rs/sam3x8e-hal" }
embedded-hal = "1.0.0-alpha.4"
nb = "1.0.0"
modular-bitfield = "0.11.2"
log = "0.4.14"
