[package]
name = "sam3x8e-hal"
version = "0.1.0"
authors = ["Alex Zepeda <alex@inferiorhumanorgans.com>"]
edition = "2024"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
embedded-hal = "1.0"
nb = "1.1"
atsam3x8e = { version = "0.1.0", features = ["critical-section"] }
critical-section = "1.2"
sam3x8e-hal-codegen = { path = "../sam3x8e-hal-codegen" }
void = { version = "1.0.2", default-features = false }
cortex-m-rt = "0.7"

[dev-dependencies]
panic-halt = "0.2.0"
cortex-m = "0.6.0"
cortex-m-semihosting = "0.3.3"

[features]
default = ["sam3x", "rt", "arduino-due"]
rt = ["atsam3x8e/rt"]

arduino-due = ["xtal-12mhz"]
macchina-m2 = ["xtal-12mhz"]
xtal-12mhz = []

# e.g. SAM3x8e from the Arduino Due
sam3x   = []

sam3a   = []

# Sample board available from Atmel
sam38h   = []
