[package]
name = "sam3x8e"
version = "0.2.0"
authors = ["Raphael Theiler <peanut@esheep.ch>", "Alex Zepeda  <alex@inferiorhumanorgans.com>"]
test = false
bench = false
edition = "2024"
repository = "https://github.com/inferiorhumanorgans/sam3x8e"
license = "MIT/Apache-2.0"
keywords = ["sam3x", "sam3x8e", "no_std", "embedded", "svd2rust"]
readme = "README.md"
description = "Device support crate for sam3x8e devices (generated using svd2rust v0.37.0)"

[lib]
test = false

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.7"
vcell = "0.1.3"

[dependencies.cortex-m-rt]
optional = true
version = "0.7"

[features]
rt = ["cortex-m-rt/device"]

[build-dependencies]
